fix text issues on mobile

--- a/app/styles/Footer.css
+++ b/app/styles/Footer.css
@@ -6,11 +6,7 @@ footer {
   background-color: var(--accent);
   height: var(--footer-height);
   width: 100%;
-  padding: 0.5rem 0 0.5rem 0;
-}
-
-p.footer-item {
-  font-weight: var(--font-weight-semibold);
+  padding: 0.5rem 0 5rem 0;
 }
 
 @media only screen and (max-width: 640px) {
