--- a/app/styles/typeset.css
+++ b/app/styles/typeset.css
@@ -29,6 +29,7 @@ h4 {
   font-size: 1.2rem;
   font-weight: var(--font-weight-semibold);
   line-height: 1.5;
+  color: var(--text-default)
   /* color: var(--on-background); */
 }
 
@@ -36,6 +37,7 @@ p {
   font-size: 1.2rem;
   line-height: 1.5;
   margin: 1rem 0;
+  color: var(--text-default)
   /* color: var(--on-background); */
 }
 
@@ -44,34 +46,44 @@ ul {
   list-style: circle;
   list-style-position: inside;
   margin: 1rem 0;
+  color: var(--text-default)
   /* color: var(--on-background); */
 }
 
 ol {
   font-size: 1.2rem;
   margin: 1rem 0;
+  color: var(--text-default)
   /* color: var(--on-background); */
 }
 
 li {
   font-size: 1.2rem;
   margin: 1rem 0;
+  color: var(--text-default)
   /* color: var(--on-background); */
 }
 
-th, td {
+th {
+  font-size: 1.2rem;
+  font-weight: var(--font-weight-semibold);
   padding: 0.5rem 1rem 0.5rem 1rem;
   line-height: 1rem;
+  color: var(--text-default)
 }
 
 td {
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  line-height: 1rem;
   font-size: 1.2rem;
+  color: var(--text-default)
   /* color: var(--on-background); */
 }
 
 p.site-title {
   font-size: 1.5rem;
   font-weight: var(--font-weight-semibold);
+  color: var(--surface);
   /* color: var(--secondary-foreground);   */
   padding: 0;
   margin: 0;
@@ -81,6 +93,11 @@ p.sub-menu-sections {
   /* color: var(--on-primary); */
   margin: 0 0 0.5rem 0;
   /* text-decoration: underline; */
+}
+
+p.footer-item {
+  color: var(--surface);
+  font-weight: var(--font-weight-semibold);
 }
 
 .blink {
